fixed alignment issue in nav bar when logged out

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -11,7 +11,6 @@
 
 .heroSection {
     width: 100%;
-    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: flex-start;
@@ -27,8 +26,8 @@
     justify-content: center;
     align-items: center;
     padding-inline: var(--padding-inline-large);
-    padding-block-end: 15rem;
     padding-block-start: 2rem;
+    padding-block-end: 15rem;
 }
 
 .heroResume {
