--- a/src/components/nav/Navbar.module.css
+++ b/src/components/nav/Navbar.module.css
@@ -30,7 +30,6 @@
     display: flex;
     flex-direction: row;
     justify-content: center;
-    align-items: flex-end;
     gap: var(--gap-medium);
     z-index: 1;
     height: 30px;
